--- a/src/renderer/assets/css/base.css
+++ b/src/renderer/assets/css/base.css
@@ -11,4 +11,41 @@
   -webkit-user-select:none;
   -ms-user-select:none;
   user-select:none;
+  font-size: 12px;
+}
+
+.border-right {
+  position: relative;
+}
+
+.border-right::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 1px;
+  height: 100%;
+  background-color: #e0e0e0;
+}
+
+.font-bold {
+  font-weight: bold;
+}
+
+.border-bottom {
+  position: relative;
+}
+
+.border-bottom::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #e0e0e0;
+}
+
+.padding0 {
+  padding: 0;
 }
